--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,69 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html {
+      @apply bg-color;
+  }
+}
+
+.image-under {
+  position: relative;
+  text-decoration: underline;
+  padding: 5px;
+  border-bottom:2px solid white;
+  /* border-radius: 50%; */
+  /* padding: -100px; */
+  /* border-bottom-width: 2px; */
+  /* border-spacing: 20px; */
+  /* padding-bottom: 10px; */
+}
+
+.image-container {
+  /* position: relative; Default value */
+  /* z-index: -1; Ensure it is behind */
+}
+
+.image-under:hover {
+  transition: .3s;
+  border-bottom:2px solid #3b82f6;
+  /* filter: hue-rotate(180deg); */
+  /* background-image: url('/github.png'); Path to your image */
+  /* background-size: cover;  */
+  /* content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #007bff; Change to your desired color */
+}
+/* 
+.image-under:click {
+
+} */
+
+.link {
+  color: inherit;
+  transition: color 0.3s;
+  text-decoration: underline;
+  /* padding: 0.5rem; */
+  text-underline-offset: 4px;
+}
+
+.link:hover {
+  color: #3b82f6;
+}
+
+.hd-color {
+  z-index: 10;
+  background-color: #303f70;
+}
+
+.bg-color {
+  background-color: #1b1b1e;
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
