added project, plus smooth scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,13 @@
 @layer base {
   html {
       @apply bg-color;
+      scroll-behavior: smooth !important;
   }
+}
+
+#projects {
+  scroll-margin-top: 80px;
+  scroll-behavior: smooth !important;
 }
 
 .image {
